refactor:change languaje from spanish to english in all page

--- a/src/components/static/GlareLabel.astro
+++ b/src/components/static/GlareLabel.astro
@@ -13,7 +13,7 @@
 </style>
 <span
   class="relative isolate mx-auto mb-4 block max-w-max overflow-hidden rounded-full border-2 border-purple-400 px-2 py-1 text-sm lg:mx-0"
-  >Juan Villegas - Artista 3D Freelance
+  >Juan Villegas - Freelance 3D Artist
   <div
     class="glare absolute top-1/2 -z-10 h-5 w-full -translate-y-1/2 -rotate-45 bg-purple-400 blur-2xl"
   >
