--- a/src/components/utils/PlanCard.astro
+++ b/src/components/utils/PlanCard.astro
@@ -52,14 +52,14 @@ const {
       target="_blank"
       href=`https://wa.me/51928959043/?text=${message}`
       class="mb-4 rounded-full px-3 py-2 font-roboto text-sm font-semibold uppercase text-white hover:scale-105 transition-transform"
-      style=`background-color: ${color};`>hacer pedido</a
+      style=`background-color: ${color};`>Ordering</a
     >
     <div class="text-xs">
       {
         available ? (
-          <span class="text-green-500">¡Plazas disponibles!</span>
+          <span class="text-green-500">Spaces available!</span>
         ) : (
-          <span class="text-red-500">¡Plazas no disponibles!</span>
+          <span class="text-red-500">Spaces not available!</span>
         )
       }
     </div>
