--- a/src/layout/About.astro
+++ b/src/layout/About.astro
@@ -10,7 +10,7 @@ import AboutIllustration from "../components/static/AboutIllustration.astro";
     <h2
       class="mb-24 text-center font-roboto text-4xl font-semibold text-amber-400 lg:mb-6 lg:text-start"
     >
-      Te Cuento un poco sobre mi
+      I'll tell you a little about myself
     </h2>
     <div class="mb-8 lg:hidden">
       <AboutIllustration />
@@ -19,30 +19,19 @@ import AboutIllustration from "../components/static/AboutIllustration.astro";
       class="mx-auto flex max-w-[700px] flex-col gap-4 lg:mx-0 lg:max-w-none"
     >
       <p>
-        Me llamo Juan David y tengo 19 años. Soy de Lima, Perú. Al igual que
-        muchas personas, busqué una manera de pasar el tiempo mientras estábamos
-        encerrados por la pandemia.
+        My name is Juan David and I am 19 years old. I am from Lima, Peru. Like many people, I was looking for a way to pass the time while we were locked up by the pandemic
       </p>
 
       <p>
-        Fue en ese entonces cuando decidí aprender a modelar en 3D, primero con
-        tutoriales en YouTube y posteriormente con cursos guiados. Lo que al
-        inicio tomé como un simple hobby, hoy en día se ha convertido en mi
-        principal fuente de ingresos. Obtuvé mi primer cliente a finales del
-        2022 y hoy ya suman decenas.
+        It was then when I decided to learn 3D modeling, first with tutorials on YouTube and later with guided courses. What at the beginning I took as a simple hobby, today has become my main source of income. I got my first client at the end of 2022 and today there are already dozens
       </p>
 
       <p>
-        Lo que más atrae de mi trabajo es mi estilo caricaturesco y animado.
-        Además de mi excelencia en el trato y compresión, doy vida a la visión
-        de las personas, mejorando su imagen de marca. He colaborado en
-        proyectos como videojuegos o visualización y simulaciones.
+        What attracts me most about my work is my cartoonish and animated style. In addition to my excellence in the treatment and compression, I give life to the vision of people, improving their brand image. I have collaborated on projects such as video games or visualization and simulations
       </p>
 
       <p>
-        Si buscas alguien que dé vida a tus ideas, genere contenido para tu
-        marca o mejore tu presencia en línea, soy el indicado. Probablemente soy
-        la persona que buscas si quieres calidad y profesionalismo.
+        If you are looking for someone to bring your ideas to life, generate content for your brand or improve your online presence, I'm the one. I'm probably the person you're looking for if you want quality and professionalism
       </p>
     </div>
   </div>
