--- a/src/layout/Features.astro
+++ b/src/layout/Features.astro
@@ -6,21 +6,21 @@ import Icon from "../components/utils/Icon.astro";
 <section class="mb-36">
   <ul class="flex flex-wrap justify-center gap-16 lg:justify-between">
     <FeatCard
-      title="Resultados Visualmente Impactantes"
-      description="Transformo tus ideas en imagenes 3D que cautivan y destacan, generando un impacto impecable"
+      title="Visually Stunning Results"
+      description="I transform your ideas into 3D images that captivate and stand out, generating an impeccable impact."
     >
       <Icon src="/svg/hd.svg" alt="quality icon" width={50} />
     </FeatCard>
     <FeatCard
-      title="Inversion Duradera de tu Marca"
-      description="Una inversion en diseño 3D que eleva tu marca y perdura en la mente de tus clientes a lo largo del tiempo"
+      title="Lasting Investment of your Brand"
+      description="An investment in 3D design that elevates your brand and endures in the minds of your customers over time."
     >
       <Icon src="/svg/sold.svg" alt="sold icon" width={50} />
     </FeatCard>
 
     <FeatCard
-      title="Comprommiso Constante"
-      description="Siempre comprometido contigo, sin importar el proyecto ni su complejidad"
+      title="Constant Commitment"
+      description="Always committed to you, no matter the project or its complexity."
     >
       <Icon src="/svg/handshake.svg" alt="handshake icon" width={50} />
     </FeatCard>
