--- a/src/layout/Hero.astro
+++ b/src/layout/Hero.astro
@@ -10,15 +10,13 @@ import GlareLabel from "../components/static/GlareLabel.astro";
       <h1
         class="mb-6 text-center font-roboto text-6xl font-semibold leading-[4.2rem] text-neutral-700 lg:text-start"
       >
-        <span class="text-cyan-400">Transforma</span> tu presencia en línea con <span
-          class="text-amber-500">Diseños en 3D</span
+        <span class="text-cyan-400">Transform</span> your online presence with <span
+          class="text-amber-500">3D Designs</span
         >
       </h1>
       <GlareLabel />
       <p class="text-center font-light text-neutral-700 lg:text-start">
-        ¡Hola! Soy Juan Villegas, un diseñador 3D reconocido por mi creatividad
-        y experiencia de más de 5 años en la industria. Mis clientes valoran mi
-        habilidad para convertir ideas en cautivadoras obras de arte.
+        Hi! I'm Juan Villegas, a 3D designer recognized for my creativity and experience of more than 5 years in the industry. My clients value my ability to turn ideas into captivating works of art.
       </p>
     </div>
   </div>
