--- a/src/layout/PageFooter.astro
+++ b/src/layout/PageFooter.astro
@@ -14,7 +14,7 @@ import Wrapper from "../components/utils/Wrapper.astro";
         ><Icon width={24} alt="icono de un telefono" src="svg/phone.svg" /> +51
         928 959 043</span
       >
-      <span class="font-extralight">©️ Todos los derechos reservados</span>
+      <span class="font-extralight">©️ All rights reserved</span>
     </div>
   </Wrapper>
 </footer>
