--- a/src/layout/PageHeader.astro
+++ b/src/layout/PageHeader.astro
@@ -12,16 +12,16 @@ import SlpitText from "../components/utils/SlpitText.astro";
   <nav class="hidden lg:block">
     <ul class="flex items-center gap-12 text-lg">
       <li>
-        <a href="#servicios"><SlpitText>Servicios</SlpitText></a>
+        <a href="#servicios"><SlpitText>Services </SlpitText></a>
       </li>
       <li>
-        <a href="#sobre"><SlpitText>Sobre Mi</SlpitText></a>
+        <a href="#sobre"><SlpitText>About Me</SlpitText></a>
       </li>
       <li>
-        <a href="#portafolio"><SlpitText>Portafolio</SlpitText></a>
+        <a href="#portafolio"><SlpitText>Portfolio</SlpitText></a>
       </li>
       <li>
-        <a href="#contacto"><SlpitText>Contacto</SlpitText></a>
+        <a href="#contacto"><SlpitText>Contact</SlpitText></a>
       </li>
     </ul>
   </nav>
@@ -29,6 +29,7 @@ import SlpitText from "../components/utils/SlpitText.astro";
     <ul class="flex items-center gap-6 text-lg">
       <li>
         <Icon
+
           href="https://www.instagram.com/villegas.arts/"
           src="/svg/instagram.svg"
           alt="enlace al instagram de Juan Villegas"
@@ -45,7 +46,7 @@ import SlpitText from "../components/utils/SlpitText.astro";
       </li>
       <li>
         <Icon
-          href="https://wa.me/51928959043/?text=¡Hola Juan! He echado un vistazo a tu portafolio y me han llamado mucho la atención tus servicios. Estoy interesado en saber más al respecto."
+          href="https://wa.me/51928959043/?text=Hi Juan! I have taken a look at your portfolio and your services have caught my attention. I am interested in learning more about it."
           src="/svg/whatsapp.svg"
           alt="enlace al whatsapp de Juan Villegas"
           width={36}
