--- a/src/layout/Portafolio.astro
+++ b/src/layout/Portafolio.astro
@@ -7,22 +7,14 @@ import Icon from "../components/utils/Icon.astro";
     <header
       class="mb-6 flex flex-col items-center font-roboto font-semibold lg:items-start"
     >
-      <h2 class="mb-2 text-4xl text-purple-400">Proyectos Recientes</h2>
-      <h3 class="text-xl text-cyan-400">Explora mi Mundo Creativo</h3>
+      <h2 class="mb-2 text-4xl text-purple-400">Recent Projects</h2>
+      <h3 class="text-xl text-cyan-400">Explore my Creative World</h3>
     </header>
     <p class="mb-4 text-center lg:text-start">
-      Mis proyectos se extienden desde la elaboración de personajes en 3D hasta la
-      creación de iconos y animaciones, siempre impregnados con mi distintivo
-      estilo cartoon. Cada pieza es el resultado de un meticuloso proceso
-      creativo y técnico, donde la atención al detalle y la búsqueda constante
-      de la originalidad se hacen evidentes. Mis personajes cobran vida con
-      expresiones únicas y cautivadoras, mis iconos comunican conceptos de
-      manera clara y distintiva, mientras que mis animaciones llevan a la
-      audiencia a un mundo vibrante y lleno de energía
+      My projects range from the development of 3D characters to the creation of icons and animations, always imbued with my distinctive cartoon style. Each piece is the result of a meticulous creative and technical process, where attention to detail and a constant search for originality are evident. My characters come to life with unique and captivating expressions, my icons communicate concepts in a clear and distinctive way, while my animations take the audience into a vibrant and energetic world.
     </p>
     <p class="mb-8 text-center lg:text-start">
-      Te invito a explorar mis perfiles públicos, donde exhibo una amplia gama
-      de trabajos que representan mi pasión por la creación.
+      I invite you to explore my public profiles, where I showcase a wide range of work that represents my passion for creation.
     </p>
     <ul
       class="flex items-center justify-center gap-2 lg:justify-start [&>*]:inline-block"
