--- a/src/layout/Pricing.astro
+++ b/src/layout/Pricing.astro
@@ -5,40 +5,39 @@ import PlanCard from "../components/utils/PlanCard.astro";
 
 <section class="relative isolate mb-36">
   <header class="mb-36 text-center">
-    <h2 class="mb-6 font-roboto text-4xl font-semibold">Paquetes y Precios</h2>
+    <h2 class="mb-6 font-roboto text-4xl font-semibold">Packages and Prices</h2>
     <p class="mx-auto max-w-[70%] opacity-80">
-      Seleccione entre mis servicios comunes o solicite uno personalizado y
-      diseñado especialmente para usted en la sección de <a class="text-green-500 hover:underline" href="#contacto">contacto</a>
+      Select from my common services or request a customized service designed especially for you in the <a class="text-green-500 hover:underline" href="#contacto">contact</a> section
     </p>
   </header>
   <div class="flex flex-wrap justify-center gap-16">
     <PlanCard
-      message="¡Hola Juan! He echado un vistazo a tu portafolio y me han llamado mucho la atención tus servicios. Estoy interesado en adquirir el plan de 20 iconos en 3D con un precio de 20$."
+      message="Hi Juan! I have taken a look at your portfolio and your services have caught my attention. I am interested in purchasing the 20 3D icons plan with a price of $20."
       color="#e18dff"
-      title="iconos 3D"
+      title="3D icons"
       price={20}
-      subtitle="¡Descuento especial para clientes de la web!"
+      subtitle="Special discount for web customers!"
       description="Paquete de 20 iconos en 3D, los cuales incluyen renders en alta calidad y los archivos fuente correspondientes"
     >
       <Icon alt="icono" src="svg/icons.svg" width={30} />
     </PlanCard>
     <PlanCard
-      message="¡Hola Juan! He echado un vistazo a tu portafolio y me han llamado mucho la atención tus servicios. Estoy interesado en adquirir el plan Diseño y Modelado de un Personaje en 3D con un precio de 25$."
+      message="Hi Juan! I have taken a look at your portfolio and your services have caught my attention. I am interested in purchasing the 3D Character Design and Modeling plan with a price of 25$."
       color="orange"
-      title="Personaje 3D"
+      title="3D Character"
       price={25}
-      subtitle="¡Descuento especial para clientes de la web!"
-      description="Diseño y Modelado de un personaje en 3D, con la entrega de renders en alta calidad y el archivo fuente adjunto"
+      subtitle="Special discount for web customers!"
+      description="Design and Modeling of a 3D character, with the delivery of high quality renders and the attached source file."
     >
       <Icon alt="icono" src="svg/pacman.svg" width={30} />
     </PlanCard>
     <PlanCard
-      message="¡Hola Juan! He echado un vistazo a tu portafolio y me han llamado mucho la atención tus servicios. Estoy interesado en adquirir el plan de Animacion en 3D con un precio de 35$."
+      message="Hi Juan! I have taken a look at your portfolio and your services have caught my attention. I am interested in purchasing the 3D Animation plan with a price of $35."
       color="cyan"
-      title="Animacion 3D"
+      title="3D Animation"
       price={35}
-      subtitle="¡Descuento especial para clientes de la web!"
-      description="Creación de animaciones para escenas, personajes y diversos propósitos como streaming y marketing"
+      subtitle="Special discount for web customers!"
+      description="Creation of animations for scenes, characters and various purposes such as streaming and marketing."
     >
       <Icon alt="icono" src="svg/animation.svg" width={30} />
     </PlanCard>
