--- a/src/layout/Reviews.astro
+++ b/src/layout/Reviews.astro
@@ -6,26 +6,24 @@ import ReviewCard from "../components/utils/ReviewCard.astro";
   <h2
     class="mb-4 text-center font-roboto text-4xl font-semibold text-amber-400"
   >
-    Mis Clientes Satisfechos
+    My Satisfied Clients
   </h2>
   <p class="mx-auto mb-24 md:max-w-[80%] text-center">
-    Mi enfoque es brindar un servicio personalizado, atento y honesto para
-    satisfacer las necesidades individuales de cada cliente, garantizando una
-    experiencia positiva en cada interacción
+    My approach is to provide personalized, attentive and honest service to meet the individual needs of each client, ensuring a positive experience in every interaction.
   </p>
   <ul class="grid sm:grid-cols-2 lg:grid-cols-3 gap-12">
     <ReviewCard
       username="Shafeeq Khan"
-      description="Juan es increíblemente competente y versado en su campo. Además de tener excelentes aptitudes profesionales, es un caballero comprometido, una persona muy cooperativa y siempre dispuesto a echar una mano, ofrecer consejo y hacer excelentes recomendaciones para elevar el nivel del producto final"
+      description="Juan is incredibly competent and knowledgeable in his field. In addition to having excellent professional skills, he is a committed gentleman, a very cooperative person and always willing to lend a hand, offer advice and make excellent recommendations to raise the level of the final product."
     />
     <ReviewCard
       username="Logal Law"
-      description="Juan entregó un excelente modelo de rifle de francotirador, totalmente texturizado con detalles intrincados. Presta una gran atención a los detalles y me encantaría volver a trabajar con él"
+      description="Juan delivered an excellent sniper rifle model, fully textured with intricate detail. He has great attention to detail and I would love to work with him again."
       src="images/logan.webp"
     />
     <ReviewCard
       username="Daniel Lannon"
-      description="Su habilidad para captar y materializar mis ideas en modelos 3D realistas fue asombrosa. La atención al detalle y la calidad de su trabajo son impecables. Además, cumplió con los plazos establecidos, lo cual fue fundamental para mi proyecto"
+      description="His ability to capture and materialize my ideas into realistic 3D models was amazing. The attention to detail and quality of his work is impeccable. In addition, he met my deadlines, which was critical to my project."
     />
   </ul>
 </section>
