--- a/src/layout/Services.astro
+++ b/src/layout/Services.astro
@@ -16,31 +16,31 @@ import ServiceCard from "../components/utils/ServiceCard.astro";
   >
     <header>
       <h2 class="mb-12 font-roboto text-4xl font-semibold text-cyan-400">
-        Mis Servicios
+        My Services
       </h2>
     </header>
     <ul class="grid gap-4 sm:grid-cols-2 lg:grid-cols-2">
       <ServiceCard
-        title="Modelado 3D"
-        description="Creación de modelos tridimensionales de objetos, personajes, arquitecturas, etc., utilizando software especializado como Blender"
+        title="3D Modeling"
+        description="Creation of three-dimensional models of objects, characters, architectures, etc, using specialized software such as Blender."
       >
         <Icon src="svg/3d.svg" alt="icono de letras en 3D" width={35} />
       </ServiceCard>
       <ServiceCard
-        title="Animación"
-        description="Dar vida a modelos 3D mediante movimiento y acciones. Desde animaciones simples hasta secuencias complejas para películas, videojuegos o publicidad."
+        title="3D Animation"
+        description="Bring 3D models to life through movement and actions. From simple animations to complex sequences for movies, video games or advertising."
       >
         <Icon src="svg/film.svg" alt="icono de una cinta de video" width={35} />
       </ServiceCard>
       <ServiceCard
-        title="Renderizado"
-        description="Transformación de modelos 3D en imágenes realistas utilizando técnicas de iluminación, texturización y sombreado para obtener resultados visuales de alta calidad."
+        title="3D Rendering"
+        description="Transforming 3D models into realistic images using lighting, texturing and shading techniques for high quality visual results."
       >
         <Icon src="svg/picture.svg" alt="icono de una imagen" width={35} />
       </ServiceCard>
       <ServiceCard
-        title="Simulaciones y Dinámicas"
-        description="Creación de efectos físicos realistas, como fluidos, cabello, tela o partículas, para añadir realismo a las animaciones o representaciones."
+        title="3D Simulations and Dynamics"
+        description="Creation of realistic physical effects, such as fluid, hair, cloth or particles, to add realism to animations or renderings."
       >
         <Icon src="svg/cloth.svg" alt="icono de una camiseta" width={35} />
       </ServiceCard>
