--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import PageFooter from "../layout/PageFooter.astro";
 import Pricing from "../layout/Pricing.astro";
 ---
 
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/svg/3d.svg" />
@@ -23,20 +23,20 @@ import Pricing from "../layout/Pricing.astro";
     <meta name="generator" content={Astro.generator} />
     <meta
       name="description"
-      content="Descubre mis servicios freelance profesionales de renderizado y modelado 3D personalizado. Transformamos tus ideas en realidades visuales impresionantes. ¡Potencia tu proyecto con Villegas3D ahora!"
+      content="Discover my professional freelance custom 3D rendering and modeling services. We transform your ideas into stunning visual realities. Power your project with Villegas3D now!"
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Contrata Servicios de Render y Modelado 3D personalizado"
+      content="Contract Custom 3D Modeling and Rendering Services"
     />
     <meta
       property="og:description"
-      content="Descubre servicios freelance profesionales de renderizado y modelado 3D personalizado. Transformamos tus ideas en realidades visuales impresionantes. ¡Potencia tu proyecto con ahora!"
+      content="Discover professional freelance custom 3D modeling and rendering services. We transform your ideas into stunning visual realities. Power your project with now!"
     />
     <meta property="og:image" content="/images/screen.jpg" />
     <meta property="og:url" content="permalink" />
-    <title>Servicios de Render y Modelado 3D personalizado - Villegas 3D</title>
+    <title>Custom 3D Modeling and Rendering Services - Villegas3D</title>
     <style is:global>
       html {
         scroll-behavior: smooth;
