--- a/src/layout/Contact.astro
+++ b/src/layout/Contact.astro
@@ -14,12 +14,10 @@ import Icon from "../components/utils/Icon.astro";
     </div>
     <header class="mb-6">
       <h2 class="mb-2 font-roboto text-4xl font-semibold text-amber-400">
-        Contacta Conmigo!
+        Contact Me!
       </h2>
       <p>
-        Puedes comunicarte conmigo enviándome un mensaje directo a través de la
-        red social que prefieras o utilizando el formulario que se encuentra a
-        continuación. 😎
+        You can contact me by sending me a direct message through the social network of your choice or by using the form below. 😎
       </p>
     </header>
     <form action="https://formspree.io/f/xaygrgdb" method="post">
@@ -28,24 +26,24 @@ import Icon from "../components/utils/Icon.astro";
         type="email"
         name="email"
         class="mb-4 w-full min-w-0 rounded-lg border border-neutral-300 bg-neutral-100 p-2 outline-1 placeholder:text-neutral-500 focus:outline focus:outline-neutral-900"
-        placeholder="Tu Email"
+        placeholder="Your Email Address"
       />
       <textarea
         name="message"
         required
         class="mb-6 w-full min-w-0 resize-none rounded-lg border border-neutral-300 bg-neutral-100 p-2 outline-1 placeholder:text-neutral-500 focus:outline focus:outline-neutral-900"
-        placeholder="Tu Mensaje"
+        placeholder="Your Message"
         cols="30"
         rows="10"></textarea>
       <div class="flex flex-wrap items-center gap-2">
         <button
           type="submit"
           class="rounded-lg bg-amber-400 p-3 px-6 transition-colors duration-150 hover:bg-amber-500"
-          >Enviar</button
+          >Send</button
         >
         <div class="mx-2 h-12 w-[1px] bg-neutral-200"></div>
         <Icon
-          href="https://wa.me/51928959043/?text=¡Hola Juan! He echado un vistazo a tu portafolio y me han llamado mucho la atención tus servicios. Estoy interesado en saber más al respecto."
+          href="https://wa.me/51928959043/?text=Hi Juan! I have taken a look at your portfolio and your services have caught my attention. I am interested in learning more about it."
           src="svg/whatsapp.svg"
           alt="enviame un mensaje por whatsapp"
           width={47}
