style:update twitter link and disable upwork link

--- a/src/layout/Contact.astro
+++ b/src/layout/Contact.astro
@@ -55,7 +55,7 @@ import Icon from "../components/utils/Icon.astro";
           width={52}
         />
         <Icon
-          href="https://twitter.com/numonudev"
+          href="https://twitter.com/numonu_arts"
           src="svg/twitter.svg"
           alt="enviame un mensaje por twitter"
           width={44}
