--- a/src/layout/Portafolio.astro
+++ b/src/layout/Portafolio.astro
@@ -37,7 +37,7 @@ import Icon from "../components/utils/Icon.astro";
       </li>
       <li>
         <Icon
-          href="https://www.upwork.com/freelancers/~016aa13d2d22429ef5?s=1110580766784868352"
+          href="#"
           src="/svg/upwork_square.svg"
           alt="enlace al upwork de Juan Villegas"
           width={44}
