style:hidde upwork link in portafolio section

--- a/src/layout/Portafolio.astro
+++ b/src/layout/Portafolio.astro
@@ -35,7 +35,7 @@ import Icon from "../components/utils/Icon.astro";
           width={52}
         />
       </li>
-      <li>
+      <li class="hidden">
         <Icon
           href="#"
           src="/svg/upwork_square.svg"
