style:add link to upwork profile

--- a/src/layout/Portafolio.astro
+++ b/src/layout/Portafolio.astro
@@ -35,9 +35,9 @@ import Icon from "../components/utils/Icon.astro";
           width={52}
         />
       </li>
-      <li class="hidden">
+      <li>
         <Icon
-          href="#"
+          href="https://www.upwork.com/freelancers/~016aa13d2d22429ef5"
           src="/svg/upwork_square.svg"
           alt="enlace al upwork de Juan Villegas"
           width={44}
